# insta-character

./: LICENSE  README.md  pyproject.toml
BE/: Dockerfile  README.md  pyproject.toml
BE/src/: main.py  nohup.out
BE/src/apps/: api_util.py  api_utils.py  gpt.py  insta.py  login.py  translate.py  user.py
BE/src/db/: database.py  model.py  session.py
BE/src/utils/: deps.py  util.py
BE/tests/: test_main.py
FE/insta-character/: package-lock.json  package.json
FE/insta-character/src/: App.js  styles.css
FE/insta-character/src/app/: store.js
FE/insta-character/src/features/user/: userSlice.js
