[tool.poetry]
name = "insta-character"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "insta_character"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
requests = "^2.28.1"
pydantic = "^1.10.4"
sqlalchemy = "^1.4.46"
mysql = "^0.0.3"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
